--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <body>
         <div class="content">
         </div>
-        <script src="js/main.js"></script>
+        <script src="assets/js/concat.js"></script>
     </body>
 </html>
