--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Make your own coffee, John.</title>
+        <title>New title.</title>
         <meta name="description" content="Make your own coffee, John.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
